# katas.old

./: .gitignore  .gitmodules  BowlingGameBench.js  BowlingGameFP.js  CMakeLists.txt  Cargo.toml  README.md  bowlingFP.js  main.cpp  package.json
App/: BowlingGame.cpp  BowlingGame.h  CMakeLists.txt  HelloWorld.cpp  HelloWorld.h
Docs/: ReadMe.md
Sources/: CMakeLists.txt
Sources/Modules/: BgUtils.h  CMakeLists.txt  Hello.cpp  Hello.h
Sources/Modules/BowlingGame/: BowlingGame.cpp  BowlingGame.h  CMakeLists.txt
Sources/Modules/Hello/: CMakeLists.txt  Hello.cpp
Sources/Modules/Helpers/: AbbreviatedTypes.h  Common.h  Exceptions.h  NotImplementedException.h  UserDefinedLiterals.h  UserDefinedTypes.h
Sources/Tests/: CMakeLists.txt
Sources/Tests/Runner.Tests/: CatchMain.cpp
Sources/Tests/Unit/: BowlingGame.UnitTests.cpp  CMakeLists.txt  Hello.UnitTests.cpp  Hello.cpp  Sample.UnitTests.cpp  Scheduler.UnitTests.cpp  Task.UnitTests.cpp
Sources/Tests/Unit/TestFramework/: ValidateTestFramework.cpp
Tests/: CMakeLists.txt
Tests/UnitTests/: CMakeLists.txt  UnitTests.cpp  ValidateTestFramework.cpp
declarative/: BowlingGame.js  Game.js  bowling.js
lib/Utils/: CMakeLists.txt  Exceptions.cpp  Exceptions.h
src/modules/: lib.rs
src/tests/: unit_empty.rs
